--- a/public/about/about.html
+++ b/public/about/about.html
@@ -11,9 +11,27 @@
     <div class="centre titleBlock">
       <a class="centre title">About</a>
     </div>
-    <div class="lowerCentre textBox" id="1">
-      <p>Hello! First of all, welcome! My name is T3g4n and I have coded this absolutely amazing website! <br>
-      anyway,
+    <div class="lowerCentre textBox centre" id="1">
+      <p>
+        Hello! First of all, welcome! My name is T3g4n and I have coded this
+        absolutely amazing website! <br />
+        Anyway 1, this is my about page so i better start saying some
+        inspirational things about why I created this website. <br />
+        Anyway 2 now that that's out of the way lets get into saying why I
+        created this! <br />
+        Well, as you know, 2020 was <b>The very best year to ever year</b>; if
+        thats actually a saying... <br />
+        Well, I am a 13 year old discord bot dev / gamer / athlete / youtuber /
+        streamer / etc. <br />
+        I only got into coding around 5 months into lockdown. I was very bored,
+        watching <a href="https://www.youtube.com" class="aqua">Youtube</a> as
+        you do, <br />
+        and
+        <a href="https://www.youtube.com" class="aqua">Youtube</a> reccomended
+        me a video from
+        <a href="https://wornoffkeys.com" class="aqua">Worn Off Keys.</a> <br />
+        I don't remember the exact video because at the time of writing this I
+        found that video around i would like to say 4 months. <br />
       </p>
     </div>
   </body>
