--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,10 @@
       <a id="1">Invite</a>
       <a id="3">Dashboard</a>
       <a href="/about">About</a>
-      <a class="active" href="#home" id="2">Home</a>
+      <a class="active" id="2">Home</a>
     </div>
     <div class="large centre verticalcentre">
       <h1>Guildster Discord Bot</h1>
     </div>
-
   </body>
 </html>
-
-<!-- npm i (package name) -->
-<!-- npm i discord.js -->
-<!-- npm init -->
