--- a/public/about/about.html
+++ b/public/about/about.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="centre titleBlock">
-      <a class="centre title">About</a>
+      <a class="title">About</a>
     </div>
-    <div class="lowerCentre textBox centre" id="1">
-      <p>
+    <div class="textBox" id="1">
+      <p class="paragraph">
         Hello! First of all, welcome! My name is T3g4n and I have coded this
         absolutely amazing website! <br />
         Anyway 1, this is my about page so i better start saying some
@@ -21,17 +21,20 @@
         created this! <br />
         Well, as you know, 2020 was <b>The very best year to ever year</b>; if
         thats actually a saying... <br />
-        Well, I am a 13 year old discord bot dev / gamer / athlete / youtuber /
-        streamer / etc. <br />
+        Well, I am a 13 year old
+        <a href="https://top.gg/bot/730440454835011674" class="aqua">discord bot dev</a> /
+        gamer / athlete /
+        <a href="https://youtube.com/T3g4n" class="aqua">youtuber</a> / streamer
+        / etc. <br />
         I only got into coding around 5 months into lockdown. I was very bored,
         watching <a href="https://www.youtube.com" class="aqua">Youtube</a> as
         you do, <br />
-        and
-        <a href="https://www.youtube.com" class="aqua">Youtube</a> reccomended
-        me a video from
-        <a href="https://wornoffkeys.com" class="aqua">Worn Off Keys.</a> <br />
+        and it recommeded me a video from
+        <a href="https://wornoffkeys.com" class="aqua">Worn Off Keys</a>. <br />
+        The thumbnail must have been good though, becuse I clicked on it and I
+        guess I started trying it out. <br />
         I don't remember the exact video because at the time of writing this I
-        found that video around i would like to say 4 months. <br />
+        found that video around, I would like to say, 4 months. <br />
       </p>
     </div>
   </body>
