--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Guildster Website</title>
+    <link rel="icon" type="image/png" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script src="main.js" defer></script>
   </head>
   <body>
@@ -12,14 +17,19 @@
       >Just warning you if you dont turn on javascript you will get hacked. Plus
       some stuff won't work so yeah be prepared.</noscript
     >
-    <div class="topnav">
+    <div class="topnav" id="myTopnav">
       <a id="1">Invite</a>
       <a id="3">Dashboard</a>
       <a href="/about">About</a>
       <a class="active" id="2">Home</a>
+      <a href="javascript:void(0);" class="icon" onclick="burgerClick()">
+        <i class="fa fa-bars"></i>
+      </a>
     </div>
+
     <div class="large centre verticalcentre">
       <h1>Guildster Discord Bot</h1>
     </div>
+    <h3 class="belowcentre centre text">"Probably the worst bot ever." - T3g4n</h3>
   </body>
 </html>
